app/assets/stylesheets/base/responsive.css.scss
// This is a self-contained media query package with specific rules for SCPRv4's design.
// If this file is removed, nothing should break - the default desktop style should remain intact.

// Device sizes
// Check base.css for desktop sizes
$mediaMidLandscape: 1024px;
$mediaMidPortrait: 768px;
$mediaSmallLandscape: 480px;
$mediaSmallPortrait: 320px;

// These mixins are for responsive use only. Don't use them to define default styles (because they're not IE7/8-friendly).
@mixin fluidPopup($margin: 4%, $top: 180px) {
	position: fixed;
	left: $margin !important;
	top: $top !important; // Leave room for headers to show
	width: 100% - $margin * 2 !important;
	max-height: 75% !important;
	overflow: scroll;
}

@mixin vertify {
	> .row-fluid {
		> [class*="span"] {
	    	float: none;
			display: block;
			width: 100%;
			margin: 0;
		}
	}
}


// Phone Landscape and below
@media screen and (max-width: $mediaSmallLandscape) {	
	// Make all columns even
	.row-fluid > [class*="span"] {
		float: none;
		display: block;
		width: auto;
		margin: 0;
	}
	
	.hidden-phone { display: none; }

	// Block level the page header small tag for readability
	.page-header h1 small {
		display: block;
		line-height: $baseLineHeight;
	}
	
	.show-segments .teaser .info {
		border-right: none !important;
		padding-right: 0;
	}
	
	
	.more-news-content {
		border-right: none !important;
	}
	
	.cbase {
		&.offlead .row-fluid { @include makeFluidRow; } // Assets are thumbnails so these can stay in multiple column format
	}
	
	.next-prev .span9 .row-fluid { 
		@include makeFluidRow; // It's just a few words, no need to make it vertical
	}
	
	.related-content {
		border-top: 1px solid $grayLighter;
		padding-top: 10px;
	}
	
	// Hide CFF vertical nav, show horizontal nav
		nav.section-nav.vertical { display: none; }
		nav.section-nav.horizontal { display: block; }
	// end CFF navs
	
	.more-news-content {
		border-right: none;
		padding-right: none;
		margin-bottom: 5px;
	}
	
	.homepage-top {
		.events-forum {
			border: none !important;
			padding-left: 0 !important;
			.mq-row-fluid {
				@include makeFluidRow;
			}
		}
	}
	
	// Fake the "pager"... hide all page number links, just show Previous and Next links.
		.pagination { 
			a, span, em {
				display: none;
				&.previous_page { display: inline; } 
				&.next_page { 
					display: inline;
					float: right;
				}
			}
		}
	// End Pager
	
	// Make content carousel assets 2-columns instead of 1 column, since they're just thumbs
		.content-carousel {
			.row-fluid {
				@include makeFluidRow;
				> .span6 {					
					@include gridFluidSpan(12);
					&:nth-child(even) { margin-right: 0px; }
					&:nth-child(odd) { margin-left: 0px; }
				}
			}
		}
	// end Content Carousel
	
	.event.content-block .event-details .row-fluid { @include makeFluidRow; } // We can keep this in 2 columns, it's small
	
	// latest videos: 2 cols
		#multimedia .latest-videos {
			.row-fluid { 
				@include makeFluidRow; 
				
				> .span6 {
					@include gridFluidSpan(12);
					&:nth-of-type(2) { 
						margin-right: 0; 
						&:after { 
							content: "."; 
							visibility: none;
						} 
					}
					&:nth-of-type(3) { margin-left: 0; }
				}
			}
		}
	// end latest videos
	
	#program-external-header { @include makeFluidRow; }
	
	.archive-strip {
		> .row-fluid .span8:last-child .event { border-bottom: none; }
		.event { 
			border-bottom: 1px solid $grayLighter; 
			.row-fluid { @include makeFluidRow; }
		}
	}
}


// Between Tablet Portrait and Phone Landscape
@media screen and (max-width: $mediaMidPortrait - 1) and (min-width: $mediaSmallLandscape + 1) {
	.head-lead {
		@include vertify;
	}
	
	// Set new widths for main columns in CFF layout
		#forum {
			#forum-span-content { // main content
				@include gridFluidSpan(14);
			}
			#forum-span-sidebar { // sidebar
				@include gridFluidSpan(10);
			}
			
			#forum-span-upcoming-events { // upcoming events
				@include gridFluidSpan(24);
			}
			#forum-span-social { // social media
				display: none;
			}
		}
	// End CFF layout widths
}
/* ... */

